WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310473
Value returned by Deque::removeAllMatching() is incorrect
https://bugs.webkit.org/show_bug.cgi?id=310473
Summary
Value returned by Deque::removeAllMatching() is incorrect
Chris Dumez
Reported
2026-03-22 03:03:10 PDT
Value returned by Deque::removeAllMatching() is incorrect.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-03-22 03:05:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61110
EWS
Comment 2
2026-03-22 17:23:24 PDT
Committed
309715@main
(18b2f1f3724b): <
https://commits.webkit.org/309715@main
> Reviewed commits have been landed. Closing PR #61110 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-22 17:24:13 PDT
<
rdar://problem/173117779
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug