Cherry-pick 309715@main (18b2f1f3724b). https://bugs.webkit.org/show_bug.cgi?id=310473

Value returned by Deque::removeAllMatching() is incorrect
    https://bugs.webkit.org/show_bug.cgi?id=310473

    Reviewed by Darin Adler and Ryosuke Niwa.

    The logic was reversed in Deque::removeAllMatching() when computing the
    number of items removed. The substraction would underflow.

    Test: Tools/TestWebKitAPI/Tests/WTF/Deque.cpp

    * Source/WTF/wtf/Deque.h:
    * Tools/TestWebKitAPI/Tests/WTF/Deque.cpp:
    (TestWebKitAPI::TEST(WTF_Deque, RemoveAllMatching)):
    (TestWebKitAPI::TEST(WTF_Deque, RemoveAllMatchingNone)):
    (TestWebKitAPI::TEST(WTF_Deque, RemoveAllMatchingAll)):
    (TestWebKitAPI::TEST(WTF_Deque, RemoveAllMatchingSingleElement)):
    (TestWebKitAPI::TEST(WTF_Deque, RemoveFirstMatching)):

    Canonical link: https://commits.webkit.org/309715@main

Canonical link: https://commits.webkit.org/298234.516@webkitglib/2.50